--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="25">
 
-    <td><img src="HTML - Personal Site\images\Personal Site PFP.png" alt="Its a currency punk"> </td>
+    <td><img src="images\Personal Site PFP.png" alt="Its a currency punk"> </td>
     <td>
       <h1>Darren Bullock</h1>
       <p><em><strong>Past Music Professional Aspiring Developer</strong></em></p>
@@ -47,9 +47,9 @@
     <li>Also your moms house</li>
   </ul>
   <hr>
-  <h3><a href="Web Development\HTML - Personal Site\Hobbies.HTML">My Hobbies</a></h3>
+  <h3><a href="Hobbies.HTML">My Hobbies</a></h3>
   <br>
-  <h3><a href="Web Development\HTML - Personal Site\contact details.html">Contact Me</a></h3>
+  <h3><a href="contact details.html">Contact Me</a></h3>
 
 </body>
 
