--- a/Hobbies.HTML
+++ b/Hobbies.HTML
@@ -10,7 +10,7 @@
   <h2>My Hobbies</h2>
   <ol type=i>
     <li><a href="https://www.youtube.com/watch?v=tLixlvqRTo4">Gaming</a></li>
-    <li><a hef="https://www.youtube.com/watch?v=ma67yOdMQfs">Surfing, or atleast trying to</a></li>
+    <li><a href="https://www.youtube.com/watch?v=ma67yOdMQfs">Surfing, or atleast trying to</a></li>
     <li><a href="https://opensea.io/rankings">cryptocurrency and nfts and shit</a></li>
     <li><a href="https://www.youtube.com/watch?v=lJVUgtHOKmg">other stuff NSFW hehe....he</a></li>
   </ol>
